   8-Oct-2021  - V0.59 Fix changing column heading issue for SAbDabTargetProvider()
   6-Jan-2023  - V0.60 Configuration changes to support tox 4
   9-Feb-2023  - V0.61 Find Highest_Clin_Trial column regardless of month in SAbDabTargetProvider(), Update baseVersion for ChEMBL
  27-Feb-2023  - V0.62 Fix PharosTargetProvider mysql loading issue
   3-Mar-2023  - V0.63 Fix typo and handle missing activityType in PharosTargetCofactorProvider()
  13-Mar-2023  - V0.64 Add CARDTargetAnnotationProvider (to replace CARDTargetFeatureProvider)
  22-Mar-2023  - V0.65 Add timeout to IMGT data file fetch, and update py-rcsb_exdb_assets locators
  24-Mar-2023  - V0.66 In PharosTargetProvider(), download sql file to separate dir
  11-Apr-2023  - V0.67 Fix issue with CARD lineage tree building--handle cases with two parents at same depth; Add treeNodeList building and exporting
  27-Apr-2023  - V0.68 Update CARD treeNodeList building
   2-May-2023  - V0.69 Remove depth field from CARD lineage tree
   5-May-2023  - V0.70 Actually check cache files exist in PharosTargetProvider testCache()
  22-May-2023  - V0.71 Add retries to tox task for MMseqs2 download
  13-Jun-2023  - V0.72 Improve logging
   3-Jul-2023  - V0.73 imgt.org no longer supports http
  18-Jul-2023  - V0.74 Update baseVersion for ChEMBL
  19-Sep-2023  - V0.75 Update testCache and reload methods for target providers;
                       Make CARDTargetOntologyProvider stashable;
                       Add try/except for chembl_webresource_client.new_client imports in ChEMBL providers in case of service downtime
  21-Sep-2023  - V0.76 Additional updates to testCache and reload methods for target providers
   9-Jan-2024  - V0.77 Update CARDTargetAnnotationProvider to ensure same annotations are selected between reruns (using a tie breaker);
                       Bug fix in ChEMBLTargetActivityProvider in updating cache file
   1-Jul-2024  - V0.78 Update SAbDabTargetProvider; Fix pylinting