@@ -71,3 +71,4 @@
    9-Jan-2024  - V0.77 Update CARDTargetAnnotationProvider to ensure same annotations are selected between reruns (using a tie breaker);
                        Bug fix in ChEMBLTargetActivityProvider in updating cache file
    1-Jul-2024  - V0.78 Update SAbDabTargetProvider; Fix pylinting
+  22-Jul-2024  - V0.79 Update SAbDabTargetProvider
